prevent scrolling on mobile (attempt 01)

--- a/style.css
+++ b/style.css
@@ -3,6 +3,9 @@ html, body{
 	height: 100%;
 	overflow: hidden;
 }
+body{
+	position: relative;
+}
 .grey{
 	color: #BBB;
 }
